# EmbeddingService

./: CLAUDE.md  README.md  draft.md  pyproject.toml
src/embeddingservice/: __init__.py  cli.py  config.py  embeddings.py  main.py  processors.py  storage.py
